--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,57 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Kreon&family=Righteous&display=swap"
-      rel="stylesheet"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../style/style.css" />
-    <title>NTHW | PORTFOLIO</title>
+    <link rel="stylesheet" href="/style/index.css" />
+   
+    <title>NTHW | HOME</title>
   </head>
+  
   <body>
-    <nav>
-      <div id="logo-bar">
-        <h1 id="logo-text"><a href="pages/index.html">NTHW</a></h1>
-      </div>
+    <link rel="stylesheet" href="/css/nav.css">
+<nav>
+  <a id="nthw-logo" href="index.html">NTHW</a>
+  <ul class="nav-bar">
+    <li class="navbar-link">
+      <a  href="about.html">About</a>
+    </li>
+    <li class="navbar-link">
+      <a  href="portfolio.html"
+        >Portfolio</a
+      >
+    </li>
+    <!-- <li class="navbar-link">
+      <a href="/blog">Blog</a>
+    </li> -->
+    <li class="navbar-link">
+      <a class="active" href="contact.html">Contact</a>
+    </li>
+  </ul>
+  <ul class="nav-mini-bar">
+    <li class="navbar-link">
+      <a  href="about.html">About</a>
+    </li>
+    <li class="navbar-link">
+      <a  href="portfolio.html"
+        >Portfolio</a
+      >
+    </li>
+    <!-- <li class="navbar-link">
+      <a  href="/blog/">Blog</a>
+    </li> -->
+    <li class="navbar-link">
+      <a class="active" href="contact.html">Contact</a>
+    </li>
+  </ul>
+  </ul>
+</nav>
 
-      <ul class="nav left-nav">
-        <div class="active-circle" id="about-circle">
-          <img src="../assets/active-circle.svg" alt="active" />
-          <li id="about-link"><a href="pages/about.html">ABOUT</a></li>
-        </div>
+<div class="contact-page">
 
-        <div class="active-circle" id="port-circle">
-          <img src="../assets/active-circle.svg" alt="active" />
-          <li id="port-link"><a href="pages/portfolio.html">PORTFOLIO</a></li>
-        </div>
-      </ul>
-      <ul class="nav right-nav">
-        <div class="active-circle active" id="contact-circle">
-          <img src="../assets/active-circle.svg" alt="active" />
-          <li id="contact-link"><a href="pages/contact.html">CONTACT</a></li>
-        </div>
-      </ul>
-    </nav>
-
-    <div class="circle-side">
-      <div class="dark-circle"></div>
-      <div class="dark-circle"></div>
-      <div class="dark-circle"></div>
-      <div class="dark-circle"></div>
-    </div>
-    <main>
-      <div>
-        <h1>contact me</h1>
-      </div>
-    </main>
-    <script src="app.js"></script>
+  <h2>Nathaniel Wallace</h2>
+  <h2>email - <a href="mailto:nthw.dev@gmail.com">nthw.dev@gmail.com</a></h2>
+  <h2>phone - 919.561.6904</h2>
+  <a href="https://github.com/nthw11" target="_blank" rel="noreferrer"><h2>Github</h2></a>
+  <a href="https://www.linkedin.com/in/nthw" target="_blank" rel="noreferrer" ><h2>Linkedin</h2></a>
+</div>
+  
+  
+<div class="footer">
+  <div class="contact-info">
+   
+  </div>
+  <div class="social-icons">
+    
+  </div>
+  <h4 id="footer-copyright">2021 &copy; NTHW</h4>
+</div>
+</body>
+</html>
   </body>
 </html>
