--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Source+Sans+Pro:wght@200;300;400;600;900&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/index.css" />
 
     <title>NTHW | HOME</title>
   </head>
   
   <body>
-    <link rel="stylesheet" href="/css/nav.css">
+   
 <nav>
   <a id="nthw-logo" href="index.html">NTHW</a>
   <ul class="nav-bar">
